<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_profile_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_selection"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        />

    <RadioGroup
        android:id="@+id/rg_profile_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_centerInParent="true"
        android:layout_below="@id/text_profile_selection"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <RadioButton
            android:id="@+id/rb_profile1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/profile_1"
            android:textColor="@color/colorPrimary"
            />

        <RadioButton
            android:id="@+id/rb_profile2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/profile_2"
            android:textColor="@color/colorPrimary"
            />

        <RadioButton
            android:id="@+id/rb_profile3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/profile_3"
            android:textColor="@color/colorPrimary"
            />

        <RadioButton
            android:id="@+id/rb_profile4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/profile_4"
            android:textColor="@color/colorPrimary"
            />

    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/rg_profile_selection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        />

</RelativeLayout>