<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/ll_profile_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_details"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/text_profile_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_selected"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_below="@id/text_details"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/profile_selected"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/text_details"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_profile_selected"
        android:padding="10dp"
        >

        <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_band_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/text_band_name_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_band_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text=""
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ll_band_name"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/text_genre_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/genre"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text=""
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ll_genre"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/text_language_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text=""
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <!--
            Social links: Facebook / Instagram / Twitter / Youtube
            Media links: Amazon music / Spotify / Apple music
            Other links: Soundcloud, Others
            Profile Picture
            Influences
            Location: Country, State/Province, Nearest City
            -->

        </RelativeLayout>


    </ScrollView>





</RelativeLayout>